opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/async_parallel"
bug-reports: "https://github.com/janestreet/async_parallel/issues"
dev-repo: "https://github.com/janestreet/async_parallel.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "--only-packages" "async_parallel" "--root" "." "-j" jobs]
]
depends: [
  "async"
  "core"
  "jbuilder"
  "ppx_driver"
  "ppx_jane"
  "sexplib"
]
available: [ ocaml-version >= "4.03.0" ]
descr: "
Distributed computing library

Parallel is a library for running tasks in other processes on a
cluster of machines.
"
