opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/async_parallel"
bug-reports: "https://github.com/janestreet/async_parallel/issues"
dev-repo: "git+https://github.com/janestreet/async_parallel.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "async"
  "core"
  "ppx_jane"
  "sexplib"
  "jbuilder"                {build & >= "1.0+beta18.1"}
  "ocaml-migrate-parsetree" {>= "1.0"}
  "ppxlib"                  {>= "0.1.0"}
]
available: [ ocaml-version >= "4.06.1" ]
descr: "
Distributed computing library

Parallel is a library for running tasks in other processes on a
cluster of machines.
"
